------------------------------------------------------
Version 1.10.2 - 1.0.1
------------------------------------------------------
Additions
- Added tooltip to the kick button to explain its usage.

Changes
- Changed mod name to the simpler title of "Bed Bugs".
- Kick button only appears after you click the button to leave your bed (i.e. only when it's needed).
- Changed position of kick button.

Bug Fixes
- None
------------------------------------------------------
Version 1.10.2 - 1.0.0 (versioning: major-minor-build)
------------------------------------------------------
Initial Creation

Additions
- Button to kick the player from the bed when sleeping.

Changes
- None

Bug Fixes
- None