@@ -1,6 +1,7 @@
 To Do:
 
     Get new API key when project changes and update to bed_bugs=x
+    Add server command to support clients without the mod
 
     NOW:
 
