@@ -1,7 +1,11 @@
 package gr8pefish.bedbugs.client.gui;
 
+import gr8pefish.bedbugs.common.BedBugs;
+import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiButton;
 import net.minecraft.client.resources.I18n;
+import net.minecraft.server.MinecraftServer;
+import net.minecraftforge.fml.common.Loader;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 
@@ -15,8 +19,22 @@ public class KickButton extends GuiButton {
     public KickButton(int x, int y){
         super(2, x, y, 60, 20, I18n.format("bedbugs.kickButtonText"));
         this.tooltipLines.clear();
-        this.tooltipLines.add(I18n.format("bedbugs.kickButtonTooltipLine1"));
-        this.tooltipLines.add(I18n.format("bedbugs.kickButtonTooltipLine2"));
+
+        boolean useNormalTooltips;
+
+        if (Minecraft.getMinecraft().isIntegratedServerRunning()) { //singleplayer
+            useNormalTooltips = true;
+        } else { //multiplayer
+            useNormalTooltips = BedBugs.isBedBugsPresentOnDedicatedServer; //need to check if remote server has it installed or not
+        }
+
+        if (useNormalTooltips) {
+            this.tooltipLines.add(I18n.format("bedbugs.kickButtonTooltipLine1"));
+            this.tooltipLines.add(I18n.format("bedbugs.kickButtonTooltipLine2"));
+        } else {
+            this.tooltipLines.add(I18n.format("bedbugs.kickButtonTooltipAddServerLine1"));
+            this.tooltipLines.add(I18n.format("bedbugs.kickButtonTooltipAddServerLine2"));
+        }
     }
 
     public boolean isMouseInButton(int mousePosX, int mousePosY){
